--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,13 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #38bdf8;
-  padding: 10px 20px;
+  padding: 20px 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .header-title {
-  font-size: 1.5rem;
+  flex: 1;
+  font-size: 2.5rem;
   font-weight: bold;
   color: white;
 }
@@ -27,19 +28,24 @@ body {
 }
 
 .header-search {
-  flex: 1;
-  margin: 0 20px;
+  flex: 2; 
+  display: flex;
+  justify-content: center;
 }
 
 .search-bar {
   width: 100%;
-  padding: 8px;
+  max-width: 400px;
+  padding: 15px;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
 
 .header-links {
+  flex: 1;
   display: flex;
+  font-size: 1.3rem;
+  justify-content: flex-end;
   gap: 15px;
 }
 
@@ -53,7 +59,6 @@ body {
   text-decoration: underline;
 }
 
-/* Home page styles */
 .home {
   padding: 20px;
 }
